--- a/vlmis_v2.5/code/application/configs/schema/Countries.dcm.yml
+++ b/vlmis_v2.5/code/application/configs/schema/Countries.dcm.yml
@@ -15,22 +15,31 @@ Countries:
       fixed: false
       nullable: false
       column: countryName
-    createdBy:
-      type: integer
-      unsigned: false
-      nullable: false
-      column: created_by
     createdDate:
       type: datetime
       nullable: true
       column: created_date
-    modifiedBy:
-      type: integer
-      unsigned: false
-      nullable: false
-      column: modified_by
     modifiedDate:
       type: datetime
       nullable: false
       column: modified_date
+  oneToOne:
+    modifiedBy:
+      targetEntity: Users
+      cascade: {  }
+      mappedBy: null
+      inversedBy: null
+      joinColumns:
+        modified_by:
+          referencedColumnName: pk_id
+      orphanRemoval: false
+    createdBy:
+      targetEntity: Users
+      cascade: {  }
+      mappedBy: null
+      inversedBy: null
+      joinColumns:
+        created_by:
+          referencedColumnName: pk_id
+      orphanRemoval: false
   lifecycleCallbacks: {  }
