--- a/vlmis_v2.5/code/application/configs/schema/GatepassDetail.dcm.yml
+++ b/vlmis_v2.5/code/application/configs/schema/GatepassDetail.dcm.yml
@@ -25,7 +25,7 @@ GatepassDetail:
       column: modified_date
   oneToOne:
     stockDetail:
-      targetEntity: StakeholderActivities
+      targetEntity: StockDetail
       cascade: {  }
       mappedBy: null
       inversedBy: null
