--- a/vlmis_v2.5/code/application/configs/schema/Items.dcm.yml
+++ b/vlmis_v2.5/code/application/configs/schema/Items.dcm.yml
@@ -60,16 +60,11 @@ Items:
       type: float
       nullable: true
       column: child_surviving_percent_per_year
+    childSurvivingPercentTillSecondYear:
+      type: float
+      nullable: true
+      column: child_surviving_percent_till_second_year
   oneToOne:
-    modifiedBy:
-      targetEntity: Users
-      cascade: {  }
-      mappedBy: null
-      inversedBy: null
-      joinColumns:
-        modified_by:
-          referencedColumnName: pk_id
-      orphanRemoval: false
     createdBy:
       targetEntity: Users
       cascade: {  }
@@ -77,6 +72,15 @@ Items:
       inversedBy: null
       joinColumns:
         created_by:
+          referencedColumnName: pk_id
+      orphanRemoval: false
+    modifiedBy:
+      targetEntity: Users
+      cascade: {  }
+      mappedBy: null
+      inversedBy: null
+      joinColumns:
+        modified_by:
           referencedColumnName: pk_id
       orphanRemoval: false
   lifecycleCallbacks: {  }
