--- a/vlmis_v2.5/code/application/configs/schema/CcmHistory.dcm.yml
+++ b/vlmis_v2.5/code/application/configs/schema/CcmHistory.dcm.yml
@@ -14,10 +14,6 @@ CcmHistory:
       type: integer
       unsigned: false
       nullable: true
-    action:
-      type: integer
-      unsigned: false
-      nullable: false
     createdDate:
       type: datetime
       nullable: false
@@ -27,13 +23,13 @@ CcmHistory:
       nullable: false
       column: modified_date
   oneToOne:
-    modifiedBy:
-      targetEntity: Users
+    action:
+      targetEntity: ListDetail
       cascade: {  }
       mappedBy: null
       inversedBy: null
       joinColumns:
-        modified_by:
+        action:
           referencedColumnName: pk_id
       orphanRemoval: false
     ccm:
@@ -61,6 +57,15 @@ CcmHistory:
       inversedBy: null
       joinColumns:
         warehouse_id:
+          referencedColumnName: pk_id
+      orphanRemoval: false
+    modifiedBy:
+      targetEntity: Users
+      cascade: {  }
+      mappedBy: null
+      inversedBy: null
+      joinColumns:
+        modified_by:
           referencedColumnName: pk_id
       orphanRemoval: false
   lifecycleCallbacks: {  }
